- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    None
- 
    5.15.7, 6.2.2
- 
        3a4c9ba693 (qt/qtwebengine-chromium/98-based) c643145a35 (qt/qtwebengine-chromium/94-based) 0910b2b2c2 (qt/qtwebengine-chromium/87-based)
Redirection to custom url schemes seem to have broken between 5.14.2 and 5.15.0. The requestStarted() is never called in attached example.
| For Gerrit Dashboard: QTBUG-99207 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 415347,1 | FIXUP: Fix url_utils for QtWebEngine | 90-based | qt/qtwebengine-chromium | Status: NEW | 0 | 0 | 
| 414417,10 | Test local, secure and file redirects | dev | qt/qtwebengine | Status: MERGED | +2 | 0 | 
| 414426,6 | FIXUP: Fix url_utils for QtWebEngine | 98-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 | 
| 415346,4 | FIXUP: Fix url_utils for QtWebEngine | 87-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 | 
| 415348,3 | FIXUP: Fix url_utils for QtWebEngine | 94-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 | 
| 417156,2 | Test local, secure and file redirects | 6.4 | qt/qtwebengine | Status: MERGED | +2 | 0 |