FIXUP: Fix url_utils for QtWebEngine

Allow redirects from local schemes to local schemes, and clean up
the general logic. We still allow almost anything from custom url
schemes.

Fixes: QTBUG-99207
Change-Id: I7d1b7edc91f82064edbf6c1a41682d5874b42d12
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit 3a4c9ba6936ec8b11a97ea0b3c684b3002f01a12)